updated styles for login

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700,900");
 @import "reset.css";
 @import "global.css";
 @import "footer.css";
 @import "header.css";
-@import "index.css";
+@import "login.css";
