--- a/css/header.css
+++ b/css/header.css
@@ -27,3 +27,19 @@
 .header__wrapper .header__insta {
   width: 140px;
 }
+
+.header__wrapper .header__input-search {
+  width: 220px;
+  height: 30px;
+  background-color: #fafafa;
+  border: 1px solid rgba(0, 0, 0, 0.0975);
+  border-radius: 3px;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+.header__wrapper .header__input-search:hover,
+.header__wrapper .header__input-search:focus {
+  outline: none;
+  background-color: white;
+}
