--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
   justify-content: center;
   background-color: white;
   border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
+  margin-bottom: 30px;
 }
 
 .header .header__wrapper {
