--- a/css/footer.css
+++ b/css/footer.css
@@ -1,25 +1,27 @@
 .footer {
-  font-weight: 700;
-  font-size: 12px;
-  text-transform: uppercase;
   width: 100%;
   max-width: 960px;
   display: flex;
   justify-content: space-between;
-  margin: 50px 0px;
+  align-items: center;
+  margin: 50px 0;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+}
+.footer .footer__navigation {
+  width: 65%;
 }
 
-.footer .footer__nav {
-  width: 65%;
+.footer .footer__list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__list .footer__list-item {
+  color: #003569;
 }
 
 .footer .footer__copyright {
   color: #999;
-}
-
-.footer__nav .footer__list {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  color: #003569;
 }
