--- a/css/global.css
+++ b/css/global.css
@@ -2,12 +2,15 @@
   box-sizing: border-box;
 }
 
+html {
+  background: #fafafa;
+}
+
 body {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fafafa;
+  font-size: 14px;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -15,4 +18,10 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+input:active,
+input:focus,
+textarea:focus {
+  outline: none;
 }
