--- a/css/login.css
+++ b/css/login.css
@@ -1,109 +1,117 @@
 .login {
-  width: 100%;
-  max-width: 800px;
   margin-top: 50px;
   display: flex;
-  justify-content: space-around;
+  width: 750px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .login .login__column {
-  width: 40%;
+  width: 46%;
 }
-
-/* login__white-box */
 
 .login__column .login__white-box {
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.0975);
+}
+
+.login__column .login__white-box:nth-child(2) {
+  padding: 30px 0;
   text-align: center;
-  padding: 30px 40px;
+  margin-bottom: 30px;
+}
+
+.login__white-box:nth-child(2) > a {
+  color: #3897f0;
+}
+
+.login__box {
+  text-align: center;
+}
+
+.login__box > span {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.login__app-stores .login__app-store img {
+  height: 40px;
 }
 
 .login__column .login__white-box:first-child {
-  margin: 15px 0;
+  margin-bottom: 12px;
+  text-align: center;
+  padding: 35px 40px 20px 40px;
 }
 
-.login__column .login__white-box:last-child {
-  display: flex;
+.login__white-box .login__logo {
+  margin-bottom: 15px;
 }
 
-.login .login__white-box:first-child > span {
-  display: block;
-  text-transform: uppercase;
-  color: #999;
-  font-size: 12px;
-  font-weight: 700;
-  margin-top: 20px;
+.login__white-box .login__form {
   margin-bottom: 20px;
+}
+
+.login__form .login__input {
+  display: block;
+  width: 100%;
+}
+
+.login__form .login__input:first-child {
+  margin-bottom: 5px;
+}
+
+.login__form .login__input:nth-child(2) {
+  margin-bottom: 10px;
+}
+
+.login__form .login__input[type="submit"] {
+  background-color: #3e99ed;
+  border: 0;
+  color: white;
+  padding: 5px;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 3px;
+}
+.login__form .login__input[type="submit"]:active {
+  opacity: 0.8;
+}
+
+.login__form .login__input[type="submit"]:active,
+.login__form .login__input[type="submit"]:focus {
+  outline: none;
+}
+
+.login__form .login__input {
+  padding: 10px;
+  border: 0;
+  border: 1px solid #efefef;
+  border-radius: 3px;
+  background: #fafafa;
+  font-size: 14px;
+}
+
+.login__form .login__input:focus {
+  border-color: rgba(0, 0, 0, 0.0975);
+  outline: none;
+}
+
+.login__white-box:first-child span {
+  display: block;
+  margin-bottom: 35px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #999;
 }
 
 .login__white-box .login__link {
   display: block;
-  font-size: 14px;
+  margin-bottom: 30px;
   color: #385185;
 }
 
 .login__white-box .login__small-link {
-  margin-top: 10px;
   font-size: 12px;
-}
-
-/* login__input */
-
-.login__white-box .login__input {
-  display: block;
-  width: 100%;
-  height: 35px;
-  background-color: #fafafa;
-  border: 1px solid rgba(0, 0, 0, 0.0975);
-  padding-left: 10px;
-  font-size: 14px;
-}
-
-.login__white-box .login__input:first-child {
-  margin: 10px 0;
-}
-.login__white-box .login__input:last-child {
-  margin-top: 10px;
-  background-color: #3e99ed;
-  color: white;
-  font-weight: 700;
-}
-
-.login__form .login__input:focus {
-  outline: none;
-}
-.login__form .login__input:hover {
-  outline: none;
-  border: 1px solid rgba(0, 0, 0, 0.4);
-}
-.login__white-box .login__input:last-child:active {
-  opacity: 0.6;
-}
-.login__white-box .login__input:last-child:hover {
-  border: none;
-}
-
-/*don't have an app box */
-.login__white-box:nth-child(2) > span {
-  color: #000;
-  font-size: 14px;
-}
-
-.login__white-box:nth-child(2) a {
-  color: #3e99ed;
-  font-size: 14px;
-}
-
-/* login__box */
-
-.login__column .login__box {
-  text-align: center;
-  margin-top: 20px;
-  font-size: 12px;
-}
-
-.login__app-store img {
-  margin-top: 20px;
-  height: 40px;
+  margin: 0;
 }
